# aws-expect

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: _ci.yml  ci.yml  pr.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.3.0-REQUIREMENTS.md  v1.3.0-ROADMAP.md
.planning/phases/04-housekeeping-expect-any/: 04-02-SUMMARY.md
.planning/phases/06-exception-foundation/: 06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md
.planning/phases/07-s3-smart-polling/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md
.planning/phases/08-dynamodb-smart-polling/: 08-01-SUMMARY.md  08-02-SUMMARY.md  08-03-SUMMARY.md
.planning/phases/09-richer-timeout-errors/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-RESEARCH.md  09-VALIDATION.md
.planning/phases/10-core-dispatch-implementation/: 10-01-PLAN.md  10-02-PLAN.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-RESEARCH.md
.planning/phases/11-type-polish-edge-testing-docs/: 11-01-PLAN.md  11-02-PLAN.md  11-CONTEXT.md  11-DISCUSSION-LOG.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
aws_expect/: __init__.py  _utils.py  dynamodb.py  exceptions.py  expect.py  lambda_function.py  parallel.py  s3.py  sqs.py
docs/superpowers/plans/: 2026-03-22-sqs-event-expectation.md
docs/superpowers/specs/: 2026-03-22-sqs-event-expectation-design.md
tests/: conftest.py  test_dynamodb_datetime.py  test_dynamodb_item.py  test_dynamodb_scan.py  test_dynamodb_stop_when.py  test_dynamodb_table.py  test_exceptions.py  test_expect_all.py  test_lambda.py  test_lambda_invoke.py  test_lambda_respond_with.py  test_parallel_any.py  test_s3_content.py  test_s3_exist.py  test_s3_not_appear.py  test_s3_not_exist.py  test_s3_stop_when.py  test_sqs.py  test_sqs_event.py  test_utils_format.py  test_utils_truncate.py
