[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "aws-expect"
version = "0.1.0"
description = "Declarative expect/wait syntax for AWS services (S3, DynamoDB, and more)"
readme = "README.md"
authors = [
    { name = "Ivan Shcherbenko", email = "ivan_shcherbenko@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["aws", "boto3", "s3", "dynamodb", "waiter", "testing", "expect"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PhishStick-hub/aws-expect"
Repository = "https://github.com/PhishStick-hub/aws-expect"
Issues = "https://github.com/PhishStick-hub/aws-expect/issues"

[tool.hatch.build.targets.wheel]
packages = ["aws_expect"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "testcontainers[localstack]>=4.10.0",
    "boto3-stubs[s3,dynamodb]>=1.35.0",
    "ty>=0.0.17",
    "ruff>=0.15.1",
]
